--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="./css/styles.css">
   <script src="./lib/angular/angular.min.js"></script>
+  <script src="./js/app.js"></script>
   <script src="./js/controllers.js"></script>
 </head>
 
