--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,20 @@
 </head>
 
 <body ng-app="mp3">
-    <div ng-view></div>
+
+    <!-- <div ng-view></div> -->
+
+    <!-- DELETE following div and UNCOMMENT the previous one -->
+    <div class="text-center">
+        <h1>Welcome to MP3!</h1>
+        <img src="http://lorempixel.com/400/200/cats"/>
+        <p> The installation and setup worked out for you. That is commendable.
+            To reward you for your efforts, here is a picture of a cat. However,
+            this is not the page you want. To get started on using your partials,
+            delete this particular div and, instead, uncomment the div given
+            in your index.html and implement your Angular routes in source_js/app.js .
+        </p>
+    </div>
 
     <!-- Scripts -->
     <script src="./lib/jquery-2.1.3.min/index.js"></script>
