--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Zhengbang Chen</title>
+    <link rel="icon" href="data/images/eye.ico" type="image/x-icon" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./css/styles.css">
