--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <script src="./lib/jquery-2.1.3.min/index.js"></script>
     <script src="./foundation6_lib/js/foundation.min.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./lib/angular-scroll/angular-scroll.min.js"></script>
     <script>
     $(document).foundation();
     </script>
